# gpmeth

./: .gitignore  LICENSE  README.md  pyproject.toml
gpmeth/: Untitled.ipynb  __init__.py  inducing.py  models.py  plotting.py  test.py  util.py
test/data/: example_region_all_X.csv  example_region_all_Y.csv  example_region_categorical_X.csv  example_region_categorical_Y.csv  example_region_df.csv  example_region_pseudotime_X.csv  example_region_pseudotime_Y.csv  example_region_umap_X.csv
