[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "gpmeth"
author = "Max Frank"
author-email = "max.frank@embl.de"

classifiers = ["License :: OSI Approved :: MIT License"]
# dynamic = ["version", "description"]
requires-python = ">=3.6"

requires = [
  "gpflow >=2.2.0",
  "pandas",
  "numpy",
  "matplotlib"
]